# PTIR-Tools

./: .gitignore  README.md  pyproject.toml  setup.py  validate_refactor.py
doc/: ASSEMBLY_REFACTORING_PHASE2.md  Assembly_Implementation_Summary.md  Assembly_Quick_Ref.md  Assembly_Refactoring.md  Assembly_System.md  CURRENT_API.md  DOCUMENTATION_UPDATE_SUMMARY.md  Grouping.md  Measurement Attributes.md  Outline.md  README.md
doc/Notes/: run_validation.py  test_refactor.py
src/ptirtools/: __init__.py  attributes.py  blocks.py  channels.py  coordinates.py  datasets.py  debugging.py  dicttools.py  domains.py  files.py  measurement_metadata.py  measurements.py  plotting.py
src/ptirtools/analysis/: __init__.py  materials.py  peaks.py  signal.py  time.py
src/ptirtools/analysis/plotting/: __init__.py  ccm.py  ccolors.py  multiples_of_pi.py  voronoi.py
src/ptirtools/assembly/: __init__.py  config_loader.py  core.py  defaults.py  examples.py  operations.py
src/ptirtools/assembly/config/: __init__.py  parameters.yaml
src/ptirtools/domains/: __init__.py  domains.py
src/ptirtools/measurements/: __init__.py  attributes.py  base.py  channels.py  filter.py  metadata.py
src/ptirtools/misc/: __init__.py  debugging.py  dicttools.py  unicode.py
testing/: assembly_test.ipynb  debug_channel_values.py  demo_grouping_workflow.py  diagnose_none.py  optir_image_stacks.ipynb  ptir_test.py  test_assemble_vz_stacks.py  test_assembly_real_data.py  test_debug.py  test_select_assertunique.py  test_sibling_architecture.py
