[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptirtools"
version = "0.1.0"
description = "PTIR Tools"
authors = [ { name = Felix H. Patzschke" } ]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "h5py>=3.14",
    "numpy>=2.2",
    "scipy>=1.15",
    "matplotlib>=3.10",
    "re>=2.2",
    "colorama"
]
